basic code cleaning