@@ -9,49 +9,41 @@ import java.util.List;
 
 import static java.lang.Math.min;
 import org.springframework.stereotype.Service;
-
 import java.util.stream.Stream;
-
-import java.util.stream.Collectors;
 import java.lang.Math;
 
 @Service
 public class AuctionMatcher extends Matcher {
-    private LinkedList<Trade> matchBuyOrder(Order buy, ArrayList<Order> sells, int price) {
-        buy.getBroker().increaseCreditBy(buy.getPrice() * buy.getQuantity());
+    private LinkedList<Trade> matchBuyOrder(Order buyOrder, ArrayList<Order> sells, int price) {
+        buyOrder.getBroker().increaseCreditBy(buyOrder.getPrice() * buyOrder.getQuantity());
         LinkedList<Trade> trades = new LinkedList<>();
-        while (buy.getQuantity() != 0) {
+        while (buyOrder.getQuantity() != 0) {
             if (sells.isEmpty()) {
-                if (buy.getQuantity() != 0) {
-                    buy.getBroker().decreaseCreditBy(buy.getValue() * buy.getQuantity());
-                }
+                if (buyOrder.getQuantity() != 0)
+                    buyOrder.getBroker().decreaseCreditBy(buyOrder.getValue() * buyOrder.getQuantity());
                 break;
             }
-            if (sells.get(0).getQuantity() > buy.getQuantity()) {
-                trades.add(new Trade(buy.getSecurity(), price, buy.getQuantity(), buy, sells.get(0)));
-                buy.getBroker().decreaseCreditBy(price * buy.getQuantity());
-                sells.get(0).decreaseQuantity(buy.getQuantity());
-                buy.decreaseQuantity(buy.getQuantity());
-                buy.getSecurity().getOrderBook().removeByOrderId(Side.BUY, buy.getOrderId());
-
+            if (sells.get(0).getQuantity() > buyOrder.getQuantity()) {
+                trades.add(new Trade(buyOrder.getSecurity(), price, buyOrder.getQuantity(), buyOrder, sells.get(0)));
+                buyOrder.getBroker().decreaseCreditBy(price * buyOrder.getQuantity());
+                sells.get(0).decreaseQuantity(buyOrder.getQuantity());
+                buyOrder.decreaseQuantity(buyOrder.getQuantity());
+                buyOrder.getSecurity().getOrderBook().removeByOrderId(Side.BUY, buyOrder.getOrderId());
             } else {
-                trades.add(new Trade(buy.getSecurity(), price, sells.get(0).getQuantity(), buy, sells.get(0)));
-                buy.getBroker().decreaseCreditBy(price * sells.get(0).getQuantity());
-                buy.decreaseQuantity(sells.get(0).getQuantity());
+                trades.add(new Trade(buyOrder.getSecurity(), price, sells.get(0).getQuantity(), buyOrder, sells.get(0)));
+                buyOrder.getBroker().decreaseCreditBy(price * sells.get(0).getQuantity());
+                buyOrder.decreaseQuantity(sells.get(0).getQuantity());
                 sells.get(0).decreaseQuantity(sells.get(0).getQuantity());
-                if (sells.get(0) instanceof IcebergOrder) {
-                    IcebergOrder sell = (IcebergOrder) sells.get(0);
+                if (sells.get(0) instanceof IcebergOrder sell) {
                     sell.replenish();
                     if (sell.getQuantity() == 0)
-                        buy.getSecurity().getOrderBook().removeByOrderId(Side.SELL, sells.get(0).getOrderId());
+                        buyOrder.getSecurity().getOrderBook().removeByOrderId(Side.SELL, sells.get(0).getOrderId());
                     else
                         sells.add(sell);
-                } else {
-                    buy.getSecurity().getOrderBook().removeByOrderId(Side.SELL, sells.get(0).getOrderId());
-                }
+                } else
+                    buyOrder.getSecurity().getOrderBook().removeByOrderId(Side.SELL, sells.get(0).getOrderId());
                 sells.remove(0);
             }
-
         }
         return trades;
     }
@@ -68,19 +60,14 @@ public class AuctionMatcher extends Matcher {
             } else {
                 trades.addAll(matchBuyOrder(buyOrder, openedSell, openingPrice));
                 if (buyOrder.getQuantity() == 0)
-                    if (buyOrder instanceof IcebergOrder) {
-                        IcebergOrder icebergBuyOrder = (IcebergOrder) buyOrder;
+                    if (buyOrder instanceof IcebergOrder icebergBuyOrder) {
                         icebergBuyOrder.replenish();
-                        if (icebergBuyOrder.getQuantity() != 0) {
+                        if (icebergBuyOrder.getQuantity() != 0)
                             openedBuy.add(icebergBuyOrder);
-                        } else {
+                        else
                             security.getOrderBook().removeByOrderId(Side.BUY, buyOrder.getOrderId());
-                        }
-
-                    } else {
+                    } else
                         security.getOrderBook().removeByOrderId(Side.BUY, buyOrder.getOrderId());
-                    }
-
             }
 
         }
@@ -90,27 +77,25 @@ public class AuctionMatcher extends Matcher {
     public int findOpeningPrice(Security security) {
         List<Integer> prices = Stream
                 .concat(security.getOrderBook().getBuyQueue().stream(), security.getOrderBook().getSellQueue().stream())
-                .map(order -> order.getPrice()).collect(Collectors.toList());
+                .map(Order::getPrice).toList();
         int maxTrade = -1;
         int maxPrice = -1;
         for (int price : prices) {
             int openedBuyQuantity = security.getOrderBook().getOpenedOrders(price, Side.BUY).stream()
-                    .mapToInt(order -> order.getAllQuantity()).sum();
+                    .mapToInt(Order::getAllQuantity).sum();
             int openedSellQuantity = security.getOrderBook().getOpenedOrders(price, Side.SELL).stream()
-                    .mapToInt(order -> order.getAllQuantity()).sum();
+                    .mapToInt(Order::getAllQuantity).sum();
             if (min(openedBuyQuantity, openedSellQuantity) > maxTrade) {
                 maxTrade = min(openedBuyQuantity, openedSellQuantity);
                 maxPrice = price;
             }
             if (min(openedBuyQuantity, openedSellQuantity) == maxTrade) {
                 if (Math.abs(maxPrice - security.getLastTradePrice()) > Math
-                        .abs(price - security.getLastTradePrice())) {
+                        .abs(price - security.getLastTradePrice()))
                     maxPrice = price;
-                }
                 if (Math.abs(maxPrice - security.getLastTradePrice()) == Math
-                        .abs(price - security.getLastTradePrice())) {
+                        .abs(price - security.getLastTradePrice()))
                     maxPrice = Math.min(maxPrice, price);
-                }
             }
         }
         return maxPrice;
@@ -127,9 +112,9 @@ public class AuctionMatcher extends Matcher {
 
     public int getTradeAbleQuantity(int price, Security security) {
         int openedBuyQuantity = security.getOrderBook().getOpenedOrders(price, Side.BUY).stream()
-                .mapToInt(order -> order.getAllQuantity()).sum();
+                .mapToInt(Order::getAllQuantity).sum();
         int openedSellQuantity = security.getOrderBook().getOpenedOrders(price, Side.SELL).stream()
-                .mapToInt(order -> order.getAllQuantity()).sum();
+                .mapToInt(Order::getAllQuantity).sum();
         return Math.min(openedSellQuantity, openedBuyQuantity);
     }
 
